[project]
name = "learn-tutor"
version = "0.1.0"
description = "AI-powered personal tutor — learn any topic with spaced repetition"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]

[project.scripts]
learn = "learn_tutor.cli:learn"
start = "learn_tutor.cli:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learn_tutor"]
